--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         <button id="btnNext"><i class="fa-solid fa-forward"></i></button>
     </div>
     <audio id="audioPlayer" controls></audio>
+
+    <div class="use">
+        <h1>How to use :-</h1>
+        <ul>
+            <li>Click on "Click here to Select a file" to select audio files from your device. Multiple files can be selected.</li>
+            <li>The selected files will be displayed in a playlist.</li>
+            <li>Now tap any Song to play the song </li>
+            <li>Use the play, pause, next, and previous buttons to control playback</li>
+            <li>The progress bar indicates the current position of the playing audio.</li>
+        </ul>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
